Upgrade to Phoenix 1.3!

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 erl_crash.dump
 
 # Static artifacts
-/node_modules
+node_modules
 
 # Since we are building js and css from web/static,
 # we ignore priv/static/{css,js}. You may want to
